Fixed header z-index

--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -10,6 +10,7 @@
     background-color: $dark-primary-color;
     grid-row: 1;
     grid-column: 1 / 7;
+    z-index: 3;
     box-shadow: 1px 1px 5px #000;
     
 
